# lineareg

./: .gitignore  README.md  __init__.py  demo.py  pyproject.toml
core/: __init__.py  backend.py  bootstrap.py  fe.py  inference.py  linalg.py
estimators/: __init__.py  base.py  dr_eventstudy.py  eventstudy_cs.py  eventstudy_ddd.py  gls.py  gmm.py  iv.py  ols.py  qr.py  rct.py  sdid.py  spatial_did.py  synthetic_control.py
output/: __init__.py  plots.py  summary.py
sim/: __init__.py  montecarlo.py
spatial/: __init__.py  spatial.py
tests/: conftest.py  test_auto_constant.py  test_constraints.py  test_core_bootstrap.py  test_core_fe.py  test_core_linalg.py  test_edge_cases.py  test_est_iv.py  test_est_ols.py  test_est_others.py  test_est_smoke_extended.py  test_eventstudy_helpers.py  test_formula.py  test_instruments.py  test_smoke.py
utils/: __init__.py  auto_constant.py  constraints.py  eventstudy_helpers.py  formula.py  helpers.py  instruments.py
